--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi primera página web</title>
 </head>
 <body>
-    <h1>¡Hola Mundo!</h1>
+    <h1>¡Hola Mundo! ^_^</h1>
     <p>Esta es mi primera página web.</p>
 </body>
 </html>
